src/assets/css/custom.css
html {
  overflow: auto;
  font-size: 18px;
}

body {
  font-size: 17px;
  font-family: Trebuchet MS, sans-serif !important;
}

::-webkit-scrollbar {
  width: 7px;
  height: 7px;
}

::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: darkgrey;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
  outline: 1px solid slategrey;
}

/* Track */
::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  -webkit-border-radius: 10px;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:window-inactive {
  background: rgba(255, 0, 0, 0.4);
}

.col-xl-12 #mapDiv {
  height: 450px;
}

.col-xl-12 .pre-scrollable {
  max-height: 500px;
}

.col-xl-8 #mapDiv {
  height: 280px;
}

.full-height-card {
  height: 100%
}

.padding-right-30 {
  padding-right: 30px;
}

.margin-top-20 {
  margin-top: 20px;
}

.margin-bottom-20 {
  margin-bottom: 20px;
}

.margin-bottom-10 {
  margin-bottom: 10px;
}

@media (min-width: 768px) {
  .full-height-card ul {
    columns: 2;
    -webkit-columns: 2;
    -moz-columns: 2;
  }
}

@media (min-width: 576px) {
  .full-height-card ul li {
    padding-right: 1.5rem;
  }
}

.full-height-card ul li {
  text-align: left;
}

.team-profile-link img {
  width: 32px;
}

.popup-button {
  font-size: 1.25rem !important;
}

.popup-button object{
  vertical-align: middle;
  filter: invert(100%);
  height: 30px;
  padding-right: 5px;
}

.senior-form .fas, .senior-form .ni, .senior-form .fas, .senior-form .far{
  color: #e43535;
}

.senior-form textarea::-webkit-input-placeholder, .senior-form textarea:focus::-webkit-input-placeholder,
.senior-form textarea::-ms-input-placeholder, .senior-form textarea:focus::-ms-input-placeholder,
.senior-form textarea::placeholder, .senior-form textarea:focus::placeholder,
.senior-form input::-webkit-input-placeholder, .senior-form input:focus::-webkit-input-placeholder,
.senior-form input::-ms-input-placeholder, .senior-form input:focus::-ms-input-placeholder,
.senior-form input::placeholder, .senior-form input:focus::placeholder
{
  color: #e43535;
  font-weight: 600;
}

.senior-form .custom-checkbox {
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 1.5rem;
}

.senior-form .custom-control-alternative .custom-control-label::before, .senior-form .custom-control-alternative .custom-control-label::after {
  top: 0.75rem;
}

.senior-form .custom-checkbox .fas, .senior-form .custom-checkbox .far{
  vertical-align: middle;
  padding: 5px;
  font-size: 2rem;
}

.request-card-container {
  margin-top: 100px;
}

.request-card {
  width: 30%;
  border: 1px solid #8898aa !important;
  margin: 0 20px 20px 0;
}

.share-icon {
  padding-right: 10px !important;
}

.request-verification-card {
  border: 1px solid #8898aa !important;
  max-width: 400px;
  min-width: 320px;
}

.request-head {
  display: flex;
  justify-content: space-between;
  flex-wrap: nowrap;
}

.text-align-left {
  text-align: left;
}

.text-align-right {
  text-align: right;
}

.center-align {
  margin: 0 auto;
}

.v-center-align {
  margin: auto 0;
}

.text-center {
  text-align: center;
}

.request-clip {
  cursor: pointer;
}

.no-margin {
  margin: 0 !important;
}

.request-address {
  margin: 20px 0 20px 0;
}

.verify-request-form {
  margin-top: 20px;
}

.request-info {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-around;
  margin-top: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  border: 1px solid black;
  border-radius: 15px;
}

.tb-task, .task-card-status-update {
  border: 1px solid #509effad;
}

.content--center {
  margin: 0 auto;
}

.task-container {
    max-width: 500px;
    min-width: 320px;
}

.tb-task-content {
   display: flex;
   justify-content: space-between;
}


@media screen and (max-width: 360px) {
  .request-info {
    flex-direction: column;
    text-align: center;
  }
}

@media screen and (max-width: 1200px) {
  .request-card {
    width: 40%;
  }
}

@media screen and (max-width: 960px) {
  .request-card {
    width: 100%;
  }
}

.instagram-media-rendered {
  margin: auto !important;
}

.request-accept-container {
  padding-top: 80px;
}

.request-accept-container img {
  width: 100px;
  height: 100px;
}

.request-accept-container label, .task-card-status-update .label {
  color: #8898aa;
}
.request-accept-container .data-item {
  border: 1px solid #8898aa ;
}
.list-item-image{
  height: 50px;
}

.force-wrap{
  overflow-wrap: break-word;
  white-space: normal;
  word-wrap: break-word;
  hyphens: auto;
}

.cursor-pointer {
  cursor: pointer;
}

.bottomright {
  position: fixed;
  bottom: 8px;
  right: 4px;
}

.media-icon-link img {
  width: 24px;
}

.address-select-warning {
  margin-top: -1rem;
  position: relative;
  font-size: smaller;
  margin-left: 0rem;
  color: red;
}

.requestsContainer {
  background: white;
  width: auto;
  margin: 13px;
}
.requestsContainer .seachbox {
  margin: 13px;
}
.carousel {
  background: transparent;
}
.carousel .BrainhubCarouselItem {
  align-items: flex-start !important;
  margin-left: 1px;
}
.carousel .carousel-arrow  {
  cursor: pointer;
  padding: 5px;
  font-size: 21px;
}

